sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:23: error: 'while' expected but identifier found.
i=0
^AlgCombSort:24: error: '(' expected but ';' found.
j=0
^AlgCombSort:26: error: illegal start of simple expression
}
^